- added memory dump for both std out and Windows
- improved CC2420 emulation
- added CLI commands
- reimplemented reset of the CPU
- improved support for Digital IO Ports
- added working ADC12 subsystem
- added watchdog WDT subsystem
- added support for file based scripts to the CLI
- added configuration system
- added connectivity between multiple running mspsim's


0.90
Changes: 
- fixed multiplier to handle the different modes better.
- refactored so that IOUnit is no longer a Chip
- added statistics commands and an exec command to the CLI
- implemented better support for statistics (operating mode)
- fixed interrupt handling bugs in IOUnit
- added API for accessing frequency/channel and output power in CC2420
- added RSSI support for CC2420
- refactored radio emulation code of ESB platform into a separate TR1001 class
- added watch on register, grep, and other commands in CLI
- added redirect to files in CLI
- added speed control API and CLI command (speed)
- added event system for cycle based events
- fixed timer (A/B) to be event driven instead of tick driven
- fixed bugs in interrupt handling of timer system
- added argument management and -nogui parameter

0.84
Changes:
- fixed bug in source file handling in ELF symbol loader
- fixed RSSI-ready flag to be set in CC2420
- refactored code from Sky/ESB into GenericNode
- fixed workaround for AWT/IO read line hang bug. (works but not nice in
  cygwin). Workaround is off by default by can be configured in CLI.
- added several new commands (start, stop, step, print, printreg, etc).
- fixed bug in USART - TX Interrupt implemented
- changed API for interruptServiced to include which vector that was serviced
- changed when interruptServiced is called - now before servicing the interrupt
  instead of after (RETI).

0.83
Changes:
- added support for external flash on Sky node (M25P80)
- added symbolic name in disassembler
- fixed timer interrupt bug causing problem with TinyOS firmwares